--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "flags.sh",
   "version": "1.0.0",
   "private": true,
+  "prisma": {
+    "schema": "db/schema.prisma"
+  },
   "scripts": {
     "build": "blitz build",
     "start:dev": "blitz dev",
@@ -15,14 +18,17 @@
     "@mantine/hooks": "^3.6.14",
     "@mantine/next": "3.6.14",
     "@mantine/prism": "^3.6.14",
+    "@prisma/client": "^3.10.0",
     "blitz": "0.45.3",
     "common-tags": "^1.8.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "nid": "^1.3.3",
+    "react": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0-rc.2",
     "react-hook-form": "7.27.1"
   },
   "devDependencies": {
     "@types/react": "17.0.39",
+    "prisma": "^3.10.0",
     "typescript": "~4.6.2"
   }
 }
