--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mantine/dropzone": "^3.6.14",
     "@mantine/hooks": "^3.6.14",
     "@mantine/next": "3.6.14",
+    "@mantine/notifications": "^4.0.0",
     "@mantine/prism": "^3.6.14",
     "@prisma/client": "^3.10.0",
     "blitz": "0.45.3",
     "common-tags": "^1.8.2",
+    "nextjs-url": "^1.0.4",
     "nid": "^1.3.3",
     "react": "^18.0.0-rc.2",
     "react-dom": "^18.0.0-rc.2",
