--- a/package.json
+++ b/package.json
@@ -1,29 +1,53 @@
 {
-  "name": "flags.sh",
+  "name": "flagssh",
   "version": "1.0.0",
+  "license": "MIT",
   "private": true,
+  "sideEffects": false,
   "scripts": {
-    "dev": "blitz dev",
-    "build": "blitz build",
-    "export": "blitz build && blitz export",
-    "start": "blitz start"
+    "build": "remix build",
+    "start:dev": "remix dev",
+    "start:prod": "yarn run build && remix-serve build"
+  },
+  "engines": {
+    "node": ">=14"
   },
   "dependencies": {
-    "@encode42/mantine-extras": "^1.0.2",
-    "@hookform/resolvers": "2.8.8",
-    "@mantine/core": "^3.6.14",
-    "@mantine/dropzone": "^3.6.14",
-    "@mantine/hooks": "^3.6.14",
-    "@mantine/next": "3.6.14",
-    "@mantine/prism": "^3.6.14",
-    "blitz": "0.45.3",
-    "common-tags": "^1.8.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "7.27.1"
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@encode42/mantine-extras": "^4.1.3",
+    "@encode42/remix-extras": "^4.2.2",
+    "@encode42/tabler-icons-types": "^1.109.0",
+    "@mantine/core": "^5.6.4",
+    "@mantine/form": "^5.6.4",
+    "@mantine/hooks": "^5.6.4",
+    "@mantine/modals": "^5.6.4",
+    "@mantine/notifications": "^5.6.4",
+    "@mantine/remix": "^5.6.4",
+    "@prisma/client": "4.5.0",
+    "@remix-run/node": "^1.7.4",
+    "@remix-run/react": "^1.7.4",
+    "@remix-run/serve": "^1.7.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-inlinesvg": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.39",
-    "typescript": "~4.6.2"
+    "@remix-run/dev": "^1.7.4",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "eslint": "8.26.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-markdown": "^3.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-sonarjs": "^0.16.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-unicorn": "^44.0.2",
+    "prisma": "4.5.0",
+    "typescript": "^4.8.4",
+    "ynpx": "^2.1.6"
   }
 }
